k8s/base/deployment-backlinks-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backlinks-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backlinks-processor
  template:
    metadata:
      labels:
        app: backlinks-processor
    spec:
      containers:
        - name: backlinks-processor
          image: ghcr.io/ionelpopjara/moogle/backlinks-processor:latest
          ports:
            - containerPort: 2116
              name: health
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 2116
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 2116
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
