k8s/base/deployment-image-indexer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-indexer
  template:
    metadata:
      labels:
        app: image-indexer
    spec:
      containers:
        - name: image-indexer
          image: ghcr.io/ionelpopjara/moogle/image-indexer:latest
          ports:
            - containerPort: 2115
              name: health
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 2115
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 2115
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
