k8s/base/deployment-indexer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indexer
  template:
    metadata:
      labels:
        app: indexer
    spec:
      containers:
        - name: indexer
          image: ghcr.io/ionelpopjara/moogle/indexer:latest
          ports:
            - containerPort: 2114
              name: health
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 2114
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 2114
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
