k8s/base/deployment-page-rank.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page-rank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: page-rank
  template:
    metadata:
      labels:
        app: page-rank
    spec:
      containers:
        - name: page-rank
          image: ghcr.io/ionelpopjara/moogle/page-rank:latest
          resources:
            requests:
              cpu: 200m
              memory: 192Mi
            limits:
              cpu: 750m
              memory: 768Mi
