k8s/base/deployment-query-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-redis
  template:
    metadata:
      labels:
        app: query-redis
    spec:
      containers:
        - name: query-redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
