k8s/base/deployment-spider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spider
  template:
    metadata:
      labels:
        app: spider
    spec:
      containers:
        - name: spider
          image: ghcr.io/ionelpopjara/moogle/spider:latest
          ports:
            - containerPort: 2113
              name: metrics
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 2113
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/ready
              port: 2113
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
