k8s/base/service-caddy.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-engine-http
spec:
  type: ClusterIP
  selector:
    app: query-engine-caddy
  ports:
    - name: http
      port: 80
      targetPort: 80
