k8s/base/service-pipeline-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-redis
spec:
  type: ClusterIP
  selector:
    app: pipeline-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
