k8s/base/service-query-engine-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-engine-metrics
  labels:
    app.kubernetes.io/name: query-engine-metrics
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "80"
spec:
  type: ClusterIP
  selector:
    app: query-engine-caddy
  ports:
    - name: metrics
      port: 80
      targetPort: 80
