k8s/base/service-query-engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-engine
spec:
  type: ClusterIP
  selector:
    app: query-engine
  ports:
    - name: fpm
      port: 9000
      targetPort: 9000
