k8s/base/service-query-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-redis
spec:
  type: ClusterIP
  selector:
    app: query-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
