k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moogle-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: moogle.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: query-engine-http
                port:
                  number: 80
